--- a/data/plugins.d/ffmemless.ini
+++ b/data/plugins.d/ffmemless.ini
@@ -4,7 +4,7 @@
 # The if there are parameters for any effects in the system settings file
 # pointed by the given environment variable, they will override the effect
 # settings for those effects. Other effects remain unchanged.
-system_effects_env = FF_MEMLESS_SETTINGS
+system_effects_env = NGF_FFMEMLESS_SETTINGS
 
 # EXAMPLE: re-define NGF_SHORT in system settings file
 # export FF_MEMLESS_SETTINGS=/path/to/my/feedback.ini
